# OpenSynapse

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: architecture-explorer.md  code-reviewer.md  perf-engineer-expert.md  security-auditor.md  spec-consultant.md  test-runner.md
.claude/commands/: adr.md  explore.md  perf.md  phase-done.md  phase-start.md  review.md  spec.md  test.md
.github/workflows/: ci.yml  release.yml
apps/control-plane/: go.mod  go.sum
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: package.json  vite.config.ts
demos/target-app/: Dockerfile  README.md  go.mod  main.go
deploy/docker/: Dockerfile.control-plane  Dockerfile.web  docker-compose.yml  nginx.conf
deploy/helm/: Chart.yaml  values.yaml
docs/: 01-PRD.md  02-architecture.md  03-feature-spec.md  04-data-model-and-api.md  05-ui-ux-spec.md  06-implementation-plan.md  07-dev-environment.md  progress.md
docs/decisions/: 0000-template.md  0001-react-19-instead-of-18.md  0002-pure-go-sqlite-driver.md  0003-multi-engine-crawler.md  0004-hash-router-instead-of-tanstack.md  0005-websocket-origin-policy.md  0006-k6-summary-parsing-via-stdout.md  0007-k6-xk6-kv-bundled-in-control-plane-image.md  0008-run-configuration-dialog.md  0009-user-testing-infrastructure.md
docs/user/: index.html
scripts/: quick-start.sh
user-testing/: README.md  docker-compose.yml
(+164 files in other folders)
